# rogerday2

./: .gitignore  Makefile  README.md  docker-compose.yml
assets/: ai_summary_task_data.txt  form_response_example_christopher.json  form_response_example_connie.json  hp_summary_example_christopher.xml  hp_summary_example_connie.xml  question_schema.json  question_schema_proper.json.debug
backend/: pyproject.toml
backend/app/: __init__.py  logger.py  main.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  security.py
backend/app/models/: __init__.py  form.py  patient.py  question.py  user.py
backend/app/routers/: __init__.py  auth.py  forms.py  patients.py  questions.py  status.py
backend/prompts/: form.py
backend/services/: claude.py
backend/tests/: test_main.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: LoginForm.js  Navbar.js
frontend/src/pages/: Dashboard.js  Patients.js  Review.css  Review.js  Settings.js  Visit.css  Visit.js
frontend/src/services/: api.js
frontend/src/utils/: auth.js
infrastructure/: Dockerfile.backend  Dockerfile.frontend
scripts/: migrate_forms.py  migrate_patients.py  migrate_questions_schema.py  migrate_users.py
